<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#00000000"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/moveBefore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/moveBefore"
            android:background="@drawable/foodnote_ic_moveback"/>

        <TextView
            android:id="@+id/simpledateformat"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/moveNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/moveNext"
            android:src="@drawable/foodnote_ic_movenext" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="10dp"
            android:layout_height="40dp"
            android:background="#7F7F7F" />

        <TextView
            android:id="@+id/textDesc"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:text="@string/desc"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="7"
        android:baselineAligned="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/title1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/editHealthDateValue1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="34dp"
                android:gravity="center_horizontal"
                android:paddingRight="10dp"
                android:text="@string/unit1"
                android:textColor="#C0C0C0"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="260dp"
                android:layout_height="1dp"
                android:background="#4A7EBB" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/breakfastLayout"
                android:layout_width="265dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title2"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/editHealthDateValue2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingRight="10dp"
                    android:text="@string/unit1"
                    android:textColor="#C0C0C0"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#4A7EBB" />

            <ImageButton
                android:id="@+id/add_icon_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/chooseFood"
                android:src="@android:drawable/ic_input_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4A7EBB" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/lunchLayout"
                android:layout_width="265dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title3"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/editHealthDateValue3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingRight="10dp"
                    android:text="@string/unit1"
                    android:textColor="#C0C0C0"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#4A7EBB" />

            <ImageButton
                android:id="@+id/add_icon_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/chooseFood"
                android:src="@android:drawable/ic_input_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4A7EBB" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/dinnerLayout"
                android:layout_width="265dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title4"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/editHealthDateValue4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingRight="10dp"
                    android:text="@string/unit1"
                    android:textColor="#C0C0C0"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#4A7EBB" />

            <ImageButton
                android:id="@+id/add_icon_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/chooseFood"
                android:src="@android:drawable/ic_input_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4A7EBB" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/morningSnackLayout"
                android:layout_width="265dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/title5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title5"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/editHealthDateValue5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingRight="10dp"
                    android:text="@string/unit1"
                    android:textColor="#C0C0C0"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#4A7EBB" />

            <ImageButton
                android:id="@+id/add_icon_morning_snack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/chooseFood"
                android:src="@android:drawable/ic_input_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4A7EBB" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/afternoonSnackLayout"
                android:layout_width="265dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/title6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title6"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/editHealthDateValue6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingRight="10dp"
                    android:text="@string/unit1"
                    android:textColor="#C0C0C0"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#4A7EBB" />

            <ImageButton
                android:id="@+id/add_icon_afternoon_snack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/chooseFood"
                android:src="@android:drawable/ic_input_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4A7EBB" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/eveningSnackLayout"
                android:layout_width="265dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/title7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title7"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/editHealthDateValue7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingRight="10dp"
                    android:text="@string/unit1"
                    android:textColor="#C0C0C0"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#4A7EBB" />

            <ImageButton
                android:id="@+id/add_icon_evening_snack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/chooseFood"
                android:src="@android:drawable/ic_input_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4A7EBB" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>